	PR optimization/7675 	* c-typeck.c (build_external_ref): Set the DECL_NONLOCAL flag 	on VAR_DECL, PARM_DECL and FUNCTION_DECL from within 	nested functions if they refer to declarations from parent functions. 	* stmt.c (expand_decl): Don't put automatic variables in registers 	if the DECL_NONLOCAL flag is set.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@65774 138bc75d-0d04-0410-961f-82ee72b054a4